--- a/model.ipynb
+++ b/model.ipynb
@@ -17,11 +17,11 @@
     "\n",
     "\n",
     "#extra\n",
-    "cat_train_dir=os.path.join(train_dir,\"Cat\")\n",
-    "dog_train_dir=os.path.join(train_dir,\"Dog\")\n",
+    "#cat_train_dir=os.path.join(train_dir,\"Cat\")\n",
+    "#dog_train_dir=os.path.join(train_dir,\"Dog\")\n",
     "\n",
-    "cat_val_dir=os.path.join(validation_dir,\"Cat\")\n",
-    "dog_val_dir=os.path.join(validation_dir,\"Dog\")\n"
+    "#cat_val_dir=os.path.join(validation_dir,\"Cat\")\n",
+    "#dog_val_dir=os.path.join(validation_dir,\"Dog\")\n"
    ]
   },
   {
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "91ce5d5d",
    "metadata": {},
    "outputs": [
@@ -63,19 +63,19 @@
     }
    ],
    "source": [
-    "def count_images(folder,extensions=(\".jpg\",\".png\",\".jpeg\")):\n",
-    "    return len([\n",
-    "        file for file in os.listdir(folder)\n",
-    "        if file.lower().endswith(extensions)\n",
-    "    ])\n",
+    "#def count_images(folder,extensions=(\".jpg\",\".png\",\".jpeg\")):\n",
+    "#    return len([\n",
+    "#        file for file in os.listdir(folder)\n",
+    "#        if file.lower().endswith(extensions)\n",
+    "#    ])\n",
     "\n",
-    "print(\"Training\")\n",
-    "print(\"cat:\",count_images(cat_train_dir))\n",
-    "print(\"dog:\",count_images(dog_train_dir))\n",
+    "#print(\"Training\")\n",
+    "#print(\"cat:\",count_images(cat_train_dir))\n",
+    "#print(\"dog:\",count_images(dog_train_dir))\n",
     "\n",
-    "print(\"Validation\")\n",
-    "print(\"cat:\",count_images(cat_val_dir))\n",
-    "print(\"dog:\",count_images(dog_val_dir))"
+    "#print(\"Validation\")\n",
+    "#print(\"cat:\",count_images(cat_val_dir))\n",
+    "#print(\"dog:\",count_images(dog_val_dir))"
    ]
   },
   {
@@ -127,27 +127,6 @@
     "    root=validation_dir,\n",
     "    transform=val_transform\n",
     ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 45,
-   "id": "d3b65f82",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "\n",
-    "\n",
-    "val_transform = transforms.Compose([\n",
-    "    transforms.Resize(256),\n",
-    "    transforms.CenterCrop(224),   # fixed crop\n",
-    "    transforms.ToTensor(),\n",
-    "    transforms.Normalize(\n",
-    "        mean=[0.485, 0.456, 0.406],\n",
-    "        std=[0.229, 0.224, 0.225]\n",
-    "    )\n",
-    "])\n"
    ]
   },
   {
