--- a/model.ipynb
+++ b/model.ipynb
@@ -3,12 +3,27 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cb6e36a4",
+   "id": "de1ed824",
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
-    "\n",
+    "from torchvision import datasets,transforms,models\n",
+    "import torch\n",
+    "from torch.utils.data import DataLoader\n",
+    "import ssl\n",
+    "import torch.nn as nn\n",
+    "import torch.optim as optim\n",
+    "from torch.optim.lr_scheduler import StepLR"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cb6e36a4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "Base_dir = os.getcwd()\n",
     "\n",
     "Data_dir=os.path.join(Base_dir,\"Data\")\n",
@@ -86,9 +101,6 @@
    "outputs": [],
    "source": [
     "#required method\n",
-    "from torchvision import datasets\n",
-    "from torchvision import transforms\n",
-    "\n",
     "train_transform=transforms.Compose([transforms.Resize((224,224)),\n",
     "                                    transforms.ToTensor(),\n",
     "                                    transforms.Normalize(mean=[0.485, 0.456, 0.406],\n",
@@ -105,10 +117,7 @@
     "                                        std=[0.229, 0.224, 0.225]),\n",
     "                                    transforms.Resize((224,224))\n",
     "                                \n",
-    "                                ])\n",
-    "\n",
-    "\n",
-    "\n"
+    "                                ])"
    ]
   },
   {
@@ -156,26 +165,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": null,
    "id": "e9261bf6",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import torch\n",
-    "from torch.utils.data import DataLoader\n",
-    "\n",
     "train_loader = DataLoader(\n",
     "    train_dataset,\n",
     "    batch_size=32,\n",
     "    num_workers=4,\n",
     "    shuffle=True\n",
-    ")\n",
-    "\n"
+    ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": null,
    "id": "1cbde654",
    "metadata": {},
    "outputs": [],
@@ -185,7 +190,7 @@
     "    batch_size=32,\n",
     "    num_workers=4,\n",
     "    shuffle=False\n",
-    ")\n"
+    ")"
    ]
   },
   {
@@ -209,18 +214,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": null,
    "id": "162daa77",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import ssl\n",
     "ssl._create_default_https_context=ssl._create_unverified_context"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": null,
    "id": "471dae41",
    "metadata": {},
    "outputs": [
@@ -251,11 +255,7 @@
     }
    ],
    "source": [
-    "import torch\n",
-    "import torch.nn as nn\n",
-    "from torchvision import models\n",
-    "\n",
-    "model=models.resnet50(pretrained=True)\n"
+    "model=models.resnet50(pretrained=True)"
    ]
   },
   {
@@ -519,8 +519,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import torch.optim as optim\n",
-    "\n",
     "def get_optimizer(model, lr=0.001):\n",
     "    optimizer = optim.Adam(\n",
     "        model.fc.parameters(), \n",
@@ -541,13 +539,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": null,
    "id": "24078a55",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from torch.optim.lr_scheduler import StepLR\n",
-    "\n",
     "scheduler = StepLR(\n",
     "    optimizer,\n",
     "    step_size=5,\n",
