train and validation function done

--- a/model.ipynb
+++ b/model.ipynb
@@ -14,7 +14,8 @@
     "import ssl\n",
     "import torch.nn as nn\n",
     "import torch.optim as optim\n",
-    "from torch.optim.lr_scheduler import StepLR"
+    "from torch.optim.lr_scheduler import StepLR\n",
+    "from tqdm import tqdm\n"
    ]
   },
   {
@@ -557,23 +558,44 @@
    "id": "1dff055b",
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "57dd784e",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1a40664a",
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "def train_one_epoch(model,train_loader,criterion,optimizer,device):\n",
+    "\n",
+    "    model.train()\n",
+    "\n",
+    "    total_loss = 0.0\n",
+    "    correct = 0\n",
+    "    total_samples = 0\n",
+    "\n",
+    "    for input,labels in tqdm(train_loader):\n",
+    "        input=input.to(device)\n",
+    "        label=labels.to(device)\n",
+    "\n",
+    "        optimizer.zero_grad()#clear old gradients\n",
+    "\n",
+    "        outputs=model(input)#passing input to model\n",
+    "\n",
+    "        loss=criterion(outputs, labels)#loss function\n",
+    "\n",
+    "        loss.backward()#backpropagation\n",
+    "\n",
+    "        optimizer.step()#update weights based on mistake\n",
+    "\n",
+    "        total_loss+=loss.item()#add current loss to total loss\n",
+    "\n",
+    "        predicted=torch.max(outputs, 1)#get predicted class\n",
+    "\n",
+    "        total_samples+=labels.size(0)#update total counters\n",
+    "\n",
+    "        correct+=(predicted==labels).sum().item()#update correct counters\n",
+    "\n",
+    "    avg_loss = total_loss/len(train_loader)\n",
+    "    \n",
+    "    accuracy = (correct/total_samples) * 100\n",
+    "\n",
+    "    return avg_loss, accuracy\n",
+    "    "
+   ]
   },
   {
    "cell_type": "code",
@@ -581,7 +603,46 @@
    "id": "ad0a70f1",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def validate_one_epoch(model, val_loader, criterion, device):\n",
+    "    \n",
+    "    model.eval()\n",
+    "\n",
+    "    total_loss = 0.0\n",
+    "    correct = 0\n",
+    "    total_samples = 0\n",
+    "\n",
+    "    \n",
+    "    with torch.no_grad():#Disable gradient calculation\n",
+    "       \n",
+    "        for images, labels in tqdm(val_loader):\n",
+    "            \n",
+    "            input=input.to(device)\n",
+    "            labels=labels.to(device)\n",
+    "\n",
+    "            \n",
+    "            outputs=model(input)\n",
+    "\n",
+    "            \n",
+    "            loss=criterion(outputs, labels)#loss function\n",
+    "\n",
+    "            total_loss+=loss.item()\n",
+    "\n",
+    "           \n",
+    "            predicted = torch.max(outputs, 1)#Get predicted class\n",
+    "\n",
+    "           \n",
+    "            total_samples += labels.size(0)#Update accuracy counters\n",
+    "            correct += (predicted == labels).sum().item()\n",
+    "\n",
+    "   \n",
+    "    avg_loss = total_loss / len(val_loader)\n",
+    "\n",
+    "    accuracy = (correct / total_samples) * 100\n",
+    "\n",
+    "    \n",
+    "    return avg_loss, accuracy\n"
+   ]
   }
  ],
  "metadata": {
