--- a/model.ipynb
+++ b/model.ipynb
@@ -567,7 +567,7 @@
     "    correct = 0\n",
     "    total_samples = 0\n",
     "\n",
-    "    for input,labels in tqdm(train_loader):\n",
+    "    for input,labels in tqdm(train_loader,desc=\"training\"):\n",
     "        input=input.to(device)\n",
     "        label=labels.to(device)\n",
     "\n",
@@ -590,7 +590,7 @@
     "        correct+=(predicted==labels).sum().item()#update correct counters\n",
     "\n",
     "    avg_loss = total_loss/len(train_loader)\n",
-    "    \n",
+    "\n",
     "    accuracy = (correct/total_samples) * 100\n",
     "\n",
     "    return avg_loss, accuracy\n",
@@ -615,7 +615,7 @@
     "    \n",
     "    with torch.no_grad():#Disable gradient calculation\n",
     "       \n",
-    "        for images, labels in tqdm(val_loader):\n",
+    "        for images, labels in tqdm(val_loader,desc=\"validation\"):\n",
     "            \n",
     "            input=input.to(device)\n",
     "            labels=labels.to(device)\n",
