--- a/model.ipynb
+++ b/model.ipynb
@@ -554,7 +554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "1dff055b",
    "metadata": {},
    "outputs": [],
@@ -568,6 +568,7 @@
     "    total_samples = 0\n",
     "\n",
     "    for input,labels in tqdm(train_loader,desc=\"training\"):\n",
+    "        \n",
     "        input=input.to(device)\n",
     "        label=labels.to(device)\n",
     "\n",
@@ -599,7 +600,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "ad0a70f1",
    "metadata": {},
    "outputs": [],
@@ -619,29 +620,75 @@
     "            \n",
     "            input=input.to(device)\n",
     "            labels=labels.to(device)\n",
-    "\n",
-    "            \n",
+    "           \n",
     "            outputs=model(input)\n",
-    "\n",
-    "            \n",
+    "           \n",
     "            loss=criterion(outputs, labels)#loss function\n",
     "\n",
     "            total_loss+=loss.item()\n",
-    "\n",
-    "           \n",
+    "          \n",
     "            predicted = torch.max(outputs, 1)#Get predicted class\n",
-    "\n",
-    "           \n",
+    "          \n",
     "            total_samples += labels.size(0)#Update accuracy counters\n",
-    "            correct += (predicted == labels).sum().item()\n",
     "\n",
-    "   \n",
+    "            correct += (predicted == labels).sum().item()\n",
+    "  \n",
     "    avg_loss = total_loss / len(val_loader)\n",
     "\n",
     "    accuracy = (correct / total_samples) * 100\n",
-    "\n",
-    "    \n",
+    "   \n",
     "    return avg_loss, accuracy\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "59c1c41e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "num_epoch=10\n",
+    "\n",
+    "train_losses,train_accs=[],[]#list for storing\n",
+    "val_losses,val_accs=[],[]\n",
+    "best_val=0\n",
+    "\n",
+    "for epoch in range(num_epoch):\n",
+    "    print(f\"Epoch [{epoch+1}/{num_epoch}]\")\n",
+    "    train_loss,train_acc=train_one_epoch(model,train_loader,criterion,optimizer,device)\n",
+    "    val_loss,val_acc=validate_one_epoch(model, val_loader, criterion, device)\n",
+    "\n",
+    "    train_losses.append(train_loss)\n",
+    "    \n",
+    "\n",
+    "    train_accs.append(train_acc)\n",
+    "    \n",
+    "\n",
+    "    val_losses.append(val_loss)\n",
+    "   \n",
+    "\n",
+    "    val_accs.append(train_acc)\n",
+    "    \n",
+    "    print(f\"Train : Loss: {train_loss:.4f} | Acc: {train_acc:.2f}%\")\n",
+    "    print(f\"Val   : Loss: {val_loss:.4f} | Acc: {val_acc:.2f}%\")\n",
+    "\n",
+    "    if val_acc>best_val:\n",
+    "        best_val=val_acc\n",
+    "        torch.save(model.state_dict(),\"best_model.pth\")\n",
+    "        print(\"best value\",best_val)\n",
+    "    \n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1594650b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n"
    ]
   }
  ],
