--- a/model.ipynb
+++ b/model.ipynb
@@ -469,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": null,
    "id": "4369e256",
    "metadata": {},
    "outputs": [
@@ -554,7 +554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "1dff055b",
    "metadata": {},
    "outputs": [],
@@ -570,7 +570,7 @@
     "    for input,labels in tqdm(train_loader,desc=\"training\"):\n",
     "        \n",
     "        input=input.to(device)\n",
-    "        label=labels.to(device)\n",
+    "        labels=labels.to(device)\n",
     "\n",
     "        optimizer.zero_grad()#clear old gradients\n",
     "\n",
@@ -600,7 +600,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "ad0a70f1",
    "metadata": {},
    "outputs": [],
@@ -616,7 +616,7 @@
     "    \n",
     "    with torch.no_grad():#Disable gradient calculation\n",
     "       \n",
-    "        for images, labels in tqdm(val_loader,desc=\"validation\"):\n",
+    "        for input, labels in tqdm(val_loader,desc=\"validation\"):\n",
     "            \n",
     "            input=input.to(device)\n",
     "            labels=labels.to(device)\n",
@@ -659,15 +659,12 @@
     "    val_loss,val_acc=validate_one_epoch(model, val_loader, criterion, device)\n",
     "\n",
     "    train_losses.append(train_loss)\n",
-    "    \n",
     "\n",
-    "    train_accs.append(train_acc)\n",
-    "    \n",
+    "    train_accs.append(train_acc)   \n",
     "\n",
     "    val_losses.append(val_loss)\n",
     "   \n",
-    "\n",
-    "    val_accs.append(train_acc)\n",
+    "    val_accs.append(val_acc)\n",
     "    \n",
     "    print(f\"Train : Loss: {train_loss:.4f} | Acc: {train_acc:.2f}%\")\n",
     "    print(f\"Val   : Loss: {val_loss:.4f} | Acc: {val_acc:.2f}%\")\n",
@@ -675,10 +672,7 @@
     "    if val_acc>best_val:\n",
     "        best_val=val_acc\n",
     "        torch.save(model.state_dict(),\"best_model.pth\")\n",
-    "        print(\"best value\",best_val)\n",
-    "    \n",
-    "\n",
-    "\n"
+    "        print(\"best value\",best_val)"
    ]
   },
   {
